@@ -36,8 +36,8 @@ clean:
 install: sdelta3 sdelta3-lt
 	mkdir   -m 0755  -p                     $(PREFIX)/bin
 	install -m 0755  sdelta3  sdelta3-lt    $(PREFIX)/bin
-	install -m 0755  sd3      sdreq         $(PREFIX)/bin
-	mkdir   -m 0755  -p                     $(PREFIX)/share/sdelta3
-	install -m 0644  LICENSE  USAGE         $(PREFIX)/share/sdelta3
-	install -m 0644  README   sdreq_README  $(PREFIX)/share/sdelta3
-	install -m 0644  sdelta3.magic          $(PREFIX)/share/sdelta3/magic
+	install -m 0755  sdelta3c sdelta3req    $(PREFIX)/bin
+	mkdir   -m 0755  -p                     $(PREFIX)/share/doc/sdelta3
+	install -m 0644  LICENSE  USAGE         $(PREFIX)/share/doc/sdelta3
+	install -m 0644  README   README.req    $(PREFIX)/share/doc/sdelta3
+	install -m 0644  sdelta3.magic          $(PREFIX)/share/doc/sdelta3/magic
