@@ -1,8 +1,8 @@
 #!/bin/bash
-# sd3 compression wrapper for sdelta3
+# sdelta3c compression wrapper for sdelta3
 # Copyright 2005 by Kyle Sallee
 # Distributed under the terms of the SPL
-# See /usr/share/sdelta3/LICENSE
+# See /usr/share/doc/sdelta3/LICENSE
 
 
 compress_out()  {
@@ -138,10 +138,10 @@ then
   echo      $"sd3 compression wrapper for sdelta3"
   echo      $"Copyright 2005 by Kyle Sallee"
   echo      $"Distributed under the terms of the SPL"
-  echo      $"See /usr/share/sdelta3/LICENSE"
+  echo      $"See /usr/share/doc/sdelta3/LICENSE"
   echo
-  echo  -e  $"To generate a patch file:  \e[32msd3  \e[34mold  \e[36mnew    \e[32mpatch\e[0m"
-  echo  -e  $"To apply    a patch file:  \e[32msd3  \e[34mold  \e[32mpatch  \e[36mnew\e[0m"
+  echo  -e  $"To generate a patch file:  \e[32msdelta3c  \e[34mold  \e[36mnew    \e[32mpatch\e[0m"
+  echo  -e  $"To apply    a patch file:  \e[32msdelta3c  \e[34mold  \e[32mpatch  \e[36mnew\e[0m"
   echo      $"Compression types that are automatically detected and supported are:"
   echo       "7za, bzip2, gzip"
   exit  1
@@ -151,8 +151,8 @@ then  translate    "$2"  "$3"
       exit  0
 fi
 
-if    !  [  -f  ${SD3_MAGIC:=/usr/share/sdelta3/magic}  ]
-then              SD3_MAGIC=~/usr/share/sdelta3/magic
+if    !  [  -f  ${SD3_MAGIC:=/usr/share/doc/sdelta3/magic}  ]
+then              SD3_MAGIC=~/usr/share/doc/sdelta3/magic
 fi
 
 if  !  [[  -f  $SD3_MAGIC  ]]
