@@ -1,3 +1,9 @@
+2019-09-29    0.20190929    zvezdochiot
+    path correction in Makefile
+
+2019-09-25    0.20190925    zvezdochiot
+    separate code and docs
+
 Thu Feb 16 20:35:09 UTC 2006    20060216    Kyle Sallee
 
 sd3 now passes environment variable $CSWIT
